--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+# {
+	margin: 0;
+	padding: 0;
+	border: 0;
+}
+
 body {
 	background-color: #103853;
 }
@@ -5,4 +11,14 @@ body {
 .container {
 	margin: 0 auto;
 	width: 50%;
+}
+
+
+input, textarea {
+	width: 400px;
+	padding: 10px;
+	margin: 10px 0px;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box; 
 }
