change input and textarea width to 100%

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ body {
 
 
 input, textarea {
-	width: 400px;
+	width: 100%;
 	padding: 10px;
 	margin: 10px 0px;
 	-webkit-box-sizing: border-box;
