--- a/css/main.css
+++ b/css/main.css
@@ -9,16 +9,43 @@ body {
 }
 
 .container {
-	margin: 0 auto;
+	margin: 30px auto;
 	width: 50%;
 }
 
 
 input, textarea {
 	width: 100%;
-	padding: 10px;
+	padding: 20px;
 	margin: 10px 0px;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box; 
+	background-color: rgba(255, 255, 255, .8);
+	border: 0;
+	color: #606060;
+	font-family: Helvetica, sans-serif;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+}
+
+textarea {
+	height: 200px;
+}
+
+button {
+	padding: 20px;
+	border: 2px solid #ffffff;
+	background-color: #eb7923;
+	color: #103853;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	font-weight: bold;
+	font-family: helvetica, sans-serif;
+	margin-top: 20px;
+}
+
+button:hover {
+	background-color: #103853;
+	color: #eb7923;
 }
